[package]
name = "none_of_those_words_are_in_the_bible"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confindent = "2.2.0"
serenity = { version = "0.11.6", default-features = false, features = [
	"client",
	"gateway",
	"rustls_backend",
	"model",
] }
thiserror = "1.0.49"
tokio = { version = "1.32", features = ["full"] }
unicode-segmentation = "1.10"
